--- a/1_final_project/makefile
+++ b/1_final_project/makefile
@@ -13,10 +13,10 @@ GENERALFULL = ADTS_and_general/general.c ADTS_and_general/general.h
 GENERALRUN = ADTS_and_general/general.c
 STACKSFULL = ADTS_and_general/stacks/stack_funcs.c ADTS_and_general/stacks/stack_funcs.h
 STACKSRUN = ADTS_and_general/stacks/stack_funcs.c
-FUNCTIONSTACKSFULL = ADTS_and_general/stacks/function_stack_funcs.h ADTS_and_general/stacks/function_stack_funcs.c
-FUNCTIONSTACKSRUN = ADTS_and_general/stacks/function_stack_funcs.c
 HASHFULL = ADTS_and_general/hash_map/hash_funcs.c ADTS_and_general/hash_map/hash_funcs.h
 HASHRUN = ADTS_and_general/hash_map/hash_funcs.c
+ARRFULL= ADTS_and_general/arrays/array_funcs.h ADTS_and_general/arrays/array_funcs.c
+ARRRUN = ADTS_and_general/arrays/array_funcs.c
 INTERPFULL = interpreter_funcs.c  interpreter_funcs.h
 INTERPRUN = interpreter_funcs.c
 PARSEFULL = parser_funcs.c parser_funcs.h
@@ -34,17 +34,19 @@ test_stacks_fast: ADTS_and_general/stacks/stack_tests.c $(STACKSFULL) $(GENERALF
 test_stacks_san: ADTS_and_general/stacks/stack_tests.c $(STACKSFULL) $(GENERALFULL)
 	 $(CC) ADTS_and_general/stacks/stack_tests.c $(STACKSRUN) $(GENERALRUN) -o test_stacks_san $(CFLAGSSAN) $(LIDLIBS)
 
-test_function_stacks_san: ADTS_and_general/stacks/function_stack_tests.c $(FUNCTIONSTACKSFULL) $(GENERALFULL)
-	$(CC) ADTS_and_general/stacks/function_stack_tests.c $(FUNCTIONSTACKSRUN) $(GENERALRUN) -o test_function_stacks_san $(CFLAGSSAN) $(LIDLIBS)
-
-test_function_stacks_fast: ADTS_and_general/stacks/function_stack_tests.c $(FUNCTIONSTACKSFULL) $(GENERALFULL)
-	$(CC) ADTS_and_general/stacks/function_stack_tests.c $(FUNCTIONSTACKSRUN) $(GENERALRUN) -o test_function_stacks_fast $(CFLAGSFAST) $(LIDLIBS)
 
 hash_map_fast: ADTS_and_general/hash_map/hash_map_tests.c $(HASHFULL) $(GENERALFULL)
 	$(CC) ADTS_and_general/hash_map/hash_map_tests.c $(HASHRUN) $(GENERALRUN) -o hash_map_fast $(CFLAGSFAST) $(LIDLIBS)
 
 hash_map_san: ADTS_and_general/hash_map/hash_map_tests.c $(HASHFULL) $(GENERALFULL)
 	$(CC) ADTS_and_general/hash_map/hash_map_tests.c $(HASHRUN) $(GENERALRUN) -o hash_map_san $(CFLAGSSAN) $(LIDLIBS)
+
+arrays_san: ADTS_and_general/arrays/array_func_tests.c $(ARRFULL) $(GENERALFULL)
+	$(CC) ADTS_and_general/arrays/array_func_tests.c $(ARRRUN) $(GENERALRUN) -o arrays_san $(CFLAGSSAN) $(LIDLIBS)
+
+arrays_fast: ADTS_and_general/arrays/array_func_tests.c $(ARRFULL) $(GENERALFULL)
+		$(CC) ADTS_and_general/arrays/array_func_tests.c $(ARRRUN) $(GENERALRUN) -o arrays_fast $(CFLAGSFAST) $(LIDLIBS)
+
 
 parser_san: parser.c $(PARSEFULL) $(GENERALFULL) parse/specific.h parse/specific.c
 	$(CC) parser.c $(PARSERUN) $(GENERALRUN) parse/specific.c  -o parser_san $(CFLAGSSAN) $(INCPARSE) $(LIDLIBS)
@@ -62,23 +64,28 @@ test_interp_fast : interpreter_tests.c $(PARSEFULL) $(INTERPFULL) interpreter/sp
 interp: interpreter.c $(PARSEFULL) $(INTERPFULL) interpreter/specific.c interpreter/specific.h  ADTS_and_general/neillsdl2.c ADTS_and_general/neillsdl2.h  $(STACKSFULL) $(GENERALFULL)
 	$(CC) interpreter.c $(PARSERUN) $(INTERPRUN)  interpreter/specific.c   ADTS_and_general/neillsdl2.c $(STACKSRUN) $(GENERALRUN) -o interp $(CFLAGSSDL) $(INCINTERP) $(LIDLIBSSDL)
 
-exten_func_san: extension_func_tests.c extension_funcs.c extension_flow.c extension_flow.h  extension_funcs.h $(PARSEFULL) $(INTERPFULL) exten/specific.c exten/specific.h $(STACKSFULL) $(GENERALFULL) $(HASHFULL) $(FUNCTIONSTACKSFULL)
-	$(CC) extension_func_tests.c extension_funcs.c extension_flow.c  exten/specific.c $(PARSERUN) $(INTERPRUN)  $(STACKSRUN) $(GENERALRUN) $(HASHRUN) $(FUNCTIONSTACKSRUN) -o exten_func_san $(CFLAGSSAN) $(INCEXTEN) $(LIDLIBS)
+exten_func_san: extension_func_tests.c extension_funcs.c extension_flow.c extension_flow.h  extension_funcs.h $(PARSEFULL) $(INTERPFULL) exten/specific.c exten/specific.h $(STACKSFULL) $(GENERALFULL) $(HASHFULL) $(ARRFULL)
+	$(CC) extension_func_tests.c extension_funcs.c extension_flow.c  exten/specific.c $(PARSERUN) $(INTERPRUN)  $(STACKSRUN) $(GENERALRUN) $(HASHRUN) $(ARRRUN)  -o exten_func_san $(CFLAGSSAN) $(INCEXTEN) $(LIDLIBS)
 
-exten_func_fast:extension_func_tests.c extension_funcs.c extension_flow.c extension_flow.h  extension_funcs.h $(PARSEFULL) $(INTERPFULL) exten/specific.c exten/specific.h $(STACKSFULL) $(GENERALFULL) $(HASHFULL)
-	$(CC) extension_func_tests.c extension_funcs.c extension_flow.c  exten/specific.c $(PARSERUN) $(INTERPRUN)  $(STACKSRUN) $(GENERALRUN) $(HASHRUN) -o exten_func_fast $(CFLAGSFAST) $(INCEXTEN) $(LIDLIBS)
+exten_func_fast:extension_func_tests.c extension_funcs.c extension_flow.c extension_flow.h  extension_funcs.h $(PARSEFULL) $(INTERPFULL) exten/specific.c exten/specific.h $(STACKSFULL) $(GENERALFULL) $(HASHFULL) $(ARRFULL)
+	$(CC) extension_func_tests.c extension_funcs.c extension_flow.c  exten/specific.c $(PARSERUN) $(INTERPRUN)  $(STACKSRUN) $(GENERALRUN) $(HASHRUN) $(ARRRUN)  -o exten_func_fast $(CFLAGSFAST) $(INCEXTEN) $(LIDLIBS)
 
-exten_flow_san: extension_flow_tests.c extension_flow.c extension_flow.h extension_funcs.c  extension_funcs.h $(PARSEFULL) $(INTERPFULL) exten/specific.c exten/specific.h $(STACKSFULL) $(GENERALFULL) $(HASHFULL)
-	$(CC) extension_flow_tests.c  extension_flow.c extension_funcs.c exten/specific.c $(PARSERUN) $(INTERPRUN)  $(STACKSRUN) $(GENERALRUN) $(HASHRUN) -o exten_flow_san $(CFLAGSSAN) $(INCEXTEN) $(LIDLIBS)
+exten_flow_san: extension_flow_tests.c extension_flow.c extension_flow.h extension_funcs.c  extension_funcs.h $(PARSEFULL) $(INTERPFULL) exten/specific.c exten/specific.h $(STACKSFULL) $(GENERALFULL) $(HASHFULL) $(ARRFULL)
+	$(CC) extension_flow_tests.c  extension_flow.c extension_funcs.c exten/specific.c $(PARSERUN) $(INTERPRUN)  $(STACKSRUN) $(GENERALRUN) $(HASHRUN) $(ARRRUN)  -o exten_flow_san $(CFLAGSSAN) $(INCEXTEN) $(LIDLIBS)
 
-exten_flow_fast: extension_flow_tests.c extension_flow.c extension_flow.h extension_funcs.c  extension_funcs.h $(PARSEFULL) $(INTERPFULL) exten/specific.c exten/specific.h $(STACKSFULL) $(GENERALFULL) $(HASHFULL)
-	$(CC) extension_flow_tests.c  extension_flow.c extension_funcs.c exten/specific.c $(PARSERUN) $(INTERPRUN)  $(STACKSRUN) $(GENERALRUN) $(HASHRUN) -o exten_flow_fast $(CFLAGSFAST) $(INCEXTEN) $(LIDLIBS)
+exten_flow_fast: extension_flow_tests.c extension_flow.c extension_flow.h extension_funcs.c  extension_funcs.h $(PARSEFULL) $(INTERPFULL) exten/specific.c exten/specific.h $(STACKSFULL) $(GENERALFULL) $(HASHFULL) $(ARRFULL)
+	$(CC) extension_flow_tests.c  extension_flow.c extension_funcs.c exten/specific.c $(PARSERUN) $(INTERPRUN)  $(STACKSRUN) $(GENERALRUN) $(HASHRUN) $(ARRRUN)  -o exten_flow_fast $(CFLAGSFAST) $(INCEXTEN) $(LIDLIBS)
 
-exten_func_flow_san: test_flow_func.c extension_funcs.c  extension_funcs.h extension_flow.c extension_flow.h $(PARSEFULL) $(INTERPFULL) exten/specific.c exten/specific.h $(STACKSFULL) $(GENERALFULL) $(HASHFULL)
-	$(CC) test_flow_func.c extension_funcs.c extension_flow.c exten/specific.c $(PARSERUN) $(INTERPRUN)  $(STACKSRUN) $(GENERALRUN) $(HASHRUN) -o exten_func_flow_san $(CFLAGSSAN) $(INCEXTEN) $(LIDLIBS)
+exten_func_flow_san: test_flow_func.c extension_funcs.c  extension_funcs.h extension_flow.c extension_flow.h $(PARSEFULL) $(INTERPFULL) exten/specific.c exten/specific.h $(STACKSFULL) $(GENERALFULL) $(HASHFULL) $(ARRFULL)
+	$(CC) test_flow_func.c extension_funcs.c extension_flow.c exten/specific.c $(PARSERUN) $(INTERPRUN)  $(STACKSRUN) $(GENERALRUN) $(HASHRUN) $(ARRRUN)  -o exten_func_flow_san $(CFLAGSSAN) $(INCEXTEN) $(LIDLIBS)
 
-exten_func_flow_fast: test_flow_func.c extension_funcs.c  extension_funcs.h extension_flow.c extension_flow.h $(PARSEFULL) $(INTERPFULL) exten/specific.c exten/specific.h $(STACKSFULL) $(GENERALFULL) $(HASHFULL)
-	$(CC) test_flow_func.c extension_funcs.c extension_flow.c exten/specific.c $(PARSERUN) $(INTERPRUN)  $(STACKSRUN) $(GENERALRUN) $(HASHRUN) -o exten_func_flow_fast $(CFLAGSFAST) $(INCEXTEN) $(LIDLIBS)
+exten_func_flow_fast: test_flow_func.c extension_funcs.c  extension_funcs.h extension_flow.c extension_flow.h $(PARSEFULL) $(INTERPFULL) exten/specific.c exten/specific.h $(STACKSFULL) $(GENERALFULL) $(HASHFULL)  $(ARRFULL)
+	$(CC) test_flow_func.c extension_funcs.c extension_flow.c exten/specific.c $(PARSERUN) $(INTERPRUN)  $(STACKSRUN) $(GENERALRUN) $(HASHRUN) $(ARRRUN)  -o exten_func_flow_fast $(CFLAGSFAST) $(INCEXTEN) $(LIDLIBS)
+
+exten_arr_san: extension_arrays.c  exten/specific.c exten/specific.h  extension_funcs.c  extension_funcs.h extension_flow.c extension_flow.h $(PARSEFULL) $(INTERPFULL) $(STACKSFULL) $(GENERALFULL) $(HASHFULL) $(ARRFULL)
+	$(CC) extension_arrays.c  exten/specific.c extension_funcs.c extension_flow.c  $(PARSERUN) $(INTERPRUN)  $(STACKSRUN) $(GENERALRUN) $(HASHRUN) $(ARRRUN) -o exten_arr_san $(CFLAGSSAN) $(INCEXTEN) $(LIDLIBS)
+
+
 
 extension: extension.c extension_funcs.c  extension_funcs.h extension_flow.c extension_flow.h $(PARSEFULL) $(INTERPFULL) exten/specific.c exten/specific.h $(STACKSFULL) $(GENERALFULL) $(HASHFULL) ADTS_and_general/neillsdl2.c ADTS_and_general/neillsdl2.h
 	$(CC) extension.c extension_funcs.c extension_flow.c exten/specific.c $(PARSERUN) $(INTERPRUN)  $(STACKSRUN) $(GENERALRUN) $(HASHRUN) ADTS_and_general/neillsdl2.c -o extension $(CFLAGSSDL) $(INCEXTEN) $(LIDLIBSSDL)
@@ -86,13 +93,11 @@ extension: extension.c extension_funcs.c  extension_funcs.h extension_flow.c ext
 
 
 
-run_tests: test_interp_san test_interp_fast hash_map_san hash_map_fast test_stacks_san test_stacks_fast test_parser_san test_parser_fast exten_func_fast exten_func_san exten_flow_san exten_flow_fast exten_func_flow_san exten_func_flow_fast test_function_stacks_san test_function_stacks_fast
+run_tests: test_interp_san test_interp_fast hash_map_san hash_map_fast test_stacks_san test_stacks_fast test_parser_san test_parser_fast exten_func_fast exten_func_san exten_flow_san exten_flow_fast exten_func_flow_san exten_func_flow_fast arrays_san arrays_fast
 	./parser_test_fast
 	./parser_test_san
 	./test_stacks_fast
 	./test_stacks_san
-	./test_function_stacks_fast
-	./test_function_stacks_san
 	./hash_map_fast
 	./hash_map_san
 	./test_interp_san
@@ -103,6 +108,8 @@ run_tests: test_interp_san test_interp_fast hash_map_san hash_map_fast test_stac
 	./exten_flow_san
 	./exten_func_flow_san
 	./exten_func_flow_fast
+	./arrays_san
+	./arrays_fast
 
 
 #runs a series of invalid files and stores error message in p_errors.txt the | true stops the makefile from terminating after seeing an error
@@ -156,4 +163,4 @@ run_extension_err:extension
 
 
 clean:
-	rm -f parser_test_fast parser_test_san test_stacks_fast test_stacks_san  parser_san test_interp_san test_interp_fast hash_map_san hash_map_fast interp extension exten_test_fast exten_test_san parser_fast exten_func_flow_san exten_func_flow_fast
+	rm -f parser_test_fast parser_test_san test_stacks_fast test_stacks_san  parser_san test_interp_san test_interp_fast hash_map_san hash_map_fast interp extension exten_test_fast exten_test_san parser_fast exten_func_flow_san exten_func_flow_fast arrays_san arrays_fast
